# POO

./: .gitignore  0.github classroom.md  1_familiaridad_lenguajecp.md  1_familiaridad_lenguajecp.mdp  1_familiaridad_lenguajecpp  2.DiseñoOrientadoObjetos.md  2.a Practica.md  3.CodificacionCpp  3.CodificacionCpp.md  4. PrimeraCod.md  5.EjerciciosDiseño.md  6. EjerciciosCod1Relaciones.md  6.1EjercicioDiseñoCod3-CargaElectrica.md  6.2EjercicioAmazon.md  6.3EjercicioDiseñoCod-CargaElectrica.md  7.Contendores  7.Contendores.md  7.ContenedoresObjetos.md  8. Herencia.md  8. PracticaPasoMensajes.md  8.contenedores.md  8.contenedores_tres.md  9.sobrecarga.md  NotasAcumuladasFaltaProyecto3.xlsx  NotasPOO2021-2.xlsx  NotasParcial.xlsx  NotasProyecto2.xlsx  PracticaDiseñoCodificacion.docx  _10. Herencia.md  git_github  git_github.md  sobrecarga.md  taller_github.md
AltosNizaPruebasCompleto/: CMakeLists.txt
AltosNizaPruebasCompleto/src/: CMakeLists.txt  main.cpp
AltosNizaPruebasCompleto/src/Model/: Admin.cpp  Fundador.cpp  Fundador.h  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  Reventa.cpp  Reventa.h
AltosNizaPruebasCompleto/src/View/: View.cpp  View.h
AltosNizaPruebasCompleto/test/: AdminTest.cpp  CMakeLists.txt  OtrasPRuebas.cpp
CasinoCompleto/: CMakeLists.txt  main.cpp
CasinoCompleto/Model/: Casino.cpp  DosColores.cpp  Jugador.h  Mayor13.cpp
CasinoCompleto/View/: View.cpp  View.h
CasinoCompleto/src/: CMakeLists.txt  main.cpp
CasinoCompleto/src/Model/: Casino.cpp  DosColores.h
CasinoCompleto/test/: hello_test.cpp
CasinoCompletoExceptions/Exceptions/: UserInputsException.cpp  UserInputsException.h
CasinoCompletoTesting/test/: CMakeLists.txt  CasinoTest.cpp  hello_test.cpp
CasinoEstudiantes/: CMakeLists.txt  ~$ercicioPracticaPolimorfismo2.docx
CasinoEstudiantes/Model/: Casino.cpp  Casino.h  Juego.cpp  Juego.h  Mayor13.cpp
Documentos/: Syllabus.docx
EjemplosFamiliaridadC++/: MatricesSumarElementosCrearElementos.cpp  While-dowhile.cpp
EjemplosFamiliaridadC++/EjApuntadoresResuelto/: .gitignore  README.md  controladorrobots.cpp  controladorrobots.h  main.cpp
EjemplosFamiliaridadC++/EjClasesObjRelApunt/: .gitignore  README.md  apuntadores_referencias.cbp  apuntadores_referencias.depend  apuntadores_referencias.layout  controladorrobots.cpp  controladorrobots.h  main.cpp  robot.cpp  robot.h
Ejercicios/: PracticaElaboracionPruebasUnitarias.docx
Ejercicios/AltosNizaPruebasCompleto/src/Model/: Admin.h  Fundador.h
Ejercicios/AltosNizaPruebasCompleto/test/: AdminTest.cpp  CMakeLists.txt  PropietarioTest.cpp
Ejercicios/CasinoCompleto/: EjercicioPracticaPolimorfismo2.docx
Ejercicios/CasinoCompleto/Model/: Casino.h  Juego.h
Ejercicios/CasinoCompletoTesting/: CMakeLists.txt
Ejercicios/CasinoCompletoTesting/src/View/: View.cpp
Ejercicios/CasinoCompletoTesting/test/: CMakeLists.txt
Ejercicios/CasinoEstudiantes/: CMakeLists.txt  main.cpp
Ejercicios/Codificacion/AltosNizaPruebas/: CMakeLists.txt
Ejercicios/Codificacion/CasinoCompleto/Model/: Casino.cpp
Ejercicios/Codificacion/CasinoCompletoTesting/src/: CMakeLists.txt
Ejercicios/Codificacion/CasinoEstudiantes/Model/: Mayor13.h  Veintiuno.cpp  Ventiuno.h
Ejercicios/Codificacion/Herencia/: CMakeLists.txt  readme.md
Ejercicios/Codificacion/Herencia/EjemploBasico/Model/: ClassA.cpp  ClassA.h  ClassC.cpp
Ejercicios/Codificacion/Herencia/EjemploBasico/View/: View.cpp  View.h
Ejercicios/Codificacion/HerenciaPolimorfismoFigGeometricas/: CMakeLists.txt  readme.md
Ejercicios/Codificacion/LaFarra/: DetalleFactura.cpp  Factura.h  Producto.cpp  Producto.h  makefile  tempCodeRunnerFile.cpp
Ejercicios/Codificacion/UnitTesting-1/: main.cpp
Ejercicios/Codificacion/veterinaria/: CMakeLists.txt  Main.cpp  Mascota.cpp  Mascota.h  Propietario.cpp  Propietario.h  README.md  Veterinaria.cpp  Veterinaria.h  eliminar.md
Ejercicios/Diseño/: 1.PracticaIdentificacionClasesObjetos.docx  2. EjercicioNiza - instanciar objetos y mostrar información.docx  3. EjercicioNiza -operaciones sobre torres de Niza - adición de clases.docx  club_tiburones.md
Ejercicios/Herencia/EjemploBasico/: Main.cpp
Ejercicios/IngSoft/: ~$acticaElaboracionPruebasUnitarias.docx
Ejercicios/LaFarra/: DetalleFactura.h  Main.cpp  Tienda.cpp  Tienda.h  View.h
Ejercicios/Soluciones/TorresNiza-Solucion/: .gitignore  Administracion.cpp  Administracion.h  CMakeLists.txt  CuartoUtil.cpp  CuartoUtil.h  Main.cpp  Propiedad.cpp  Propiedad.h  Propietario.cpp  Propietario.h  README.md
Herencia/EjemploBasico/: makefile
Herencia/EjemploBasico/Model/: ClassA.cpp  ClassA.h  ClassB.cpp  ClassB.h  ClassC.cpp  ClassC.h
Herencia/EjemploBasico/View/: View.cpp  View.h
LaFarra/: Factura.cpp  README.md  Tienda.cpp  Tienda.h  TipoProducto.cpp  TipoProducto.h  View.cpp
Notas/: NotasEnsayos2022-1.xlsx  NotasParcial.xlsx  NotasProyecto1.xlsx  NotasTareasTalleres.xlsx
Polimorfismo/: Persona.h  Práctica inicio de polimorfismo.docx  makefile
Polimorfismo/Model/: Colaborador.cpp  Colaborador.h  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  Universidad.cpp  Universidad.h
Polimorfismo/View/: View.cpp  View.h
PromptIA/: PROMPT - AsisteP1-1.txt  PROMPT - AsisteP1-2.txt  PROMPT - AsisteP1-3-Vector.txt  PROMPT- AsisteP1-4-Matrices.txt  README.md  codex_poo1
PromptIA/PROMPTS-PRACTICAR/C1-ProgramacionCpp/: PROMPT - AsisteP1-3-Vector.txt
PromptIA/PROMPTS-PRACTICAR/C2-POO-basico/: PROMPT-1.ClasesObjetosAtributosMetodos.txt  PROMPT-2.Nova-ModeladoCodificacion.txt  PROMPT-3.Nexo-PasoMensajesEncapsulamiento.txt  PROMPT-4.ARISTA-ModeladoUML.txt  PROMPT-ClasesObjetosAtributosMetodos.txt  PROMPT-ModeladoCodificacion.md
PromptIA/PROMPTS-PRACTICAR/Cohorte1-ProgramacionC++/: PROMPT - AsisteP1-3-VectorV0.0  PROMPT - AutoevaluacionCohorte1.txt
Proyectos/Proyecto1/: ~$oyecto - actas de grado.docx  ~WRL3836.tmp
UnitTesting-1/: CMakeLists.txt
UnitTesting-1/src/: Calculator.cpp  Calculator.h
UnitTesting-1/test/: CMakeLists.txt  CalculatorTest.cpp
(+48 files in other folders)
